force-app/main/default/objects/OPP_Layer__c/OPP_Layer__c.object-meta.xml
<CustomObject>
    <label>Layer</label>
    <nameField>
        <displayFormat>LA-{00000000}</displayFormat>
        <label>Layer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Layers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>