force-app/main/default/objects/OPP_Layer__c/fields/Layer_fm__c.field-meta.xml
<CustomField>
    <fullName>Layer_fm__c</fullName>
    <formula>IF( ISPICKVAL(Type__c , &apos;QS&apos;),
			/* Type이 &apos;QS&apos;일 때:QS */
			&apos;QS&apos;,
			IF(
				
				Excess__c = 0,
    /* Excess가 0일 때: LOL xs OPDs */
    IF(ABS(LOL__c) &gt;= 1000000000000, TEXT(LOL__c / 1000000000000) &amp; &quot;tr&quot;,
    IF(ABS(LOL__c) &gt;= 1000000000, TEXT(LOL__c / 1000000000) &amp; &quot;bn&quot;,
    IF(ABS(LOL__c) &gt;= 1000000, TEXT(LOL__c / 1000000) &amp; &quot;M&quot;,
    TEXT(LOL__c)))) &amp; &quot; xs OPDs&quot;,

    /* Excess가 0이 아닐 때: LOL xs Excess xs OPDs */
    IF(ABS(LOL__c) &gt;= 1000000000000, TEXT(LOL__c / 1000000000000) &amp; &quot;tr&quot;,
    IF(ABS(LOL__c) &gt;= 1000000000, TEXT(LOL__c / 1000000000) &amp; &quot;bn&quot;,
    IF(ABS(LOL__c) &gt;= 1000000, TEXT(LOL__c / 1000000) &amp; &quot;M&quot;,
    TEXT(LOL__c)))) 
    &amp; &quot; xs &quot; &amp; 
    IF(ABS(Excess__c) &gt;= 1000000000000, TEXT(Excess__c / 1000000000000) &amp; &quot;tr&quot;,
    IF(ABS(Excess__c) &gt;= 1000000000, TEXT(Excess__c / 1000000000) &amp; &quot;bn&quot;,
    IF(ABS(Excess__c) &gt;= 1000000, TEXT(Excess__c / 1000000) &amp; &quot;M&quot;,
    TEXT(Excess__c)))) 
    &amp; &quot; xs OPDs&quot;
							)
)</formula>
    <label>Layer</label>
    <type>Text</type>
</CustomField>