force-app/main/default/objects/OPP_Layer__c/fields/LayerCurrency__c.field-meta.xml
<CustomField>
    <fullName>LayerCurrency__c</fullName>
    <label>Layer Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COM_Currency</valueSetName>
    </valueSet>
</CustomField>