force-app/main/default/objects/OPP_Layer__c/fields/OldLayerId__c.field-meta.xml
<CustomField>
    <fullName>OldLayerId__c</fullName>
    <label>OldLayerId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>