force-app/main/default/objects/OPP_Layer__c/fields/Opportunity_md__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_md__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Layers</relationshipLabel>
    <relationshipName>Layers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>