force-app/main/default/objects/OPP_Layer__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>QS</fullName>
            </value>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Excess</fullName>
            </value>
            <value>
                <fullName>Umbrella</fullName>
            </value>
            <value>
                <fullName>Brkg Adj</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>